[project]
name = "maintaining-an-industrial-safety-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.123.3",
    "psycopg[binary]>=3.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
]
