[project]
name = "maintaining-an-industrial-safety-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.123.3",
    "psycopg2-binary>=2.9.11",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0.44",
]
[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ARG", # flake8-unused-arguments
]
ignore = []
